--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,6 +1,6 @@
 .testimonial {
     background-color: rgba(255, 255, 255, .8);
-    padding: 0 18x 1px 18px;
+    padding: 0 18px 1px 18px;
     margin-bottom: 98px;
 
     @mixin atLarge {
