Updated footer and page-section css

--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -17,7 +17,7 @@
         padding-bottom: 0;
 
         @mixin atLarge {
-            padding-bottom: 4.5rem;
+            padding-bottom: 0;
         }
     }
 
