--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -4,6 +4,10 @@
     padding: .5rem 0;
     text-align: center;
 
+    @mixin atLarge {
+        margin-top: 4.5rem;
+        }
+
     &__text {
         display: block;
         margin-bottom: 1rem;
@@ -14,5 +18,6 @@
         margin-bottom: 0;
         margin-right: 1.4rem;
         }
+        
     }
 }
